# alvar

./: CMakeLists.txt
sample/: CvTestbed.h  GlutViewer.h  SampleFilter.cpp  SampleOptimization.cpp
src/: Alvar.cpp  Alvar.h.cmake  CMakeLists.txt  Container3d.h  FernImageDetector.h  FernPoseEstimator.h  FileFormatUtils.h  IntegralImage.h  Kalman.cpp  Kalman.h  Marker.cpp  Optimization.h  Tracker.h  TrackerFeatures.cpp  TrifocalTensor.h  UnscentedKalman.cpp  UnscentedKalman.h  Util.h
src/platform/: CMakeLists.txt  CaptureFactory.cpp  Timer_unix.cpp
src/platform/capture_plugin_file/: CMakeLists.txt
src/platform/capture_plugin_highgui/: CMakeLists.txt
test/: TestMarkerDetector.cpp
